# bazel_kotlin

./: .bazelignore  .bazelrc  .envrc  .gitignore  MODULE.bazel  README.md  kotest.MODULE.bazel  rules_jvm_external~~maven~maven_install.json
.github/workflows/: bazel-test.yaml
env/: BUILD.bazel  README.md  tools.bzl
kotlin/net/eigenvalue/example/: BUILD.bazel  Main.kt  log4j2.xml
kotlin/net/eigenvalue/example/lib/: BUILD.bazel  IncredibleApi.kt
kotlin/net/eigenvalue/example/lib/test/: BUILD.bazel  SomeTest.kt
kotlin/net/eigenvalue/example2/: BUILD.bazel  Minimal.kt
