module(
    name = "bazel_kotlin",
    version = "0.1",
)

bazel_dep(name = "rules_java", version = "7.6.1")
bazel_dep(name = "rules_kotlin", version = "1.9.6")

bazel_dep(name = "rules_jvm_external", version = "6.2")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    resolver = "coursier",
    artifacts = [
        "io.ktor:ktor-server-core-jvm:2.3.12",
        "io.ktor:ktor-http:2.3.12",
        "io.ktor:ktor-server-netty-jvm:2.3.12",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    lock_file = "@//:rules_jvm_external~~maven~maven_install.json"
)

maven.artifact(
    artifact = "log4j-api",
    group = "org.apache.logging.log4j",
    version = "2.20.0",
)
maven.artifact(
    artifact = "log4j-core",
    group = "org.apache.logging.log4j",
    version = "2.20.0",
)
maven.artifact(
    artifact = "log4j-jcl",
    group = "org.apache.logging.log4j",
    version = "2.20.0",
)
maven.artifact(
    artifact = "log4j-jul",
    group = "org.apache.logging.log4j",
    version = "2.20.0",
)
maven.artifact(
    artifact = "log4j-slf4j-impl",
    group = "org.apache.logging.log4j",
    version = "2.20.0",
)
maven.artifact(
    artifact = "log4j-slf4j2-impl",
    group = "org.apache.logging.log4j",
    version = "2.20.0",
)

maven.artifact(
    testonly = True,
    artifact = "kotest-assertions-api-jvm",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-assertions-api",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-assertions-core-jvm",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-assertions-core",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-assertions-json-jvm",
    group = "io.kotest",
    version = "5.3.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-assertions-shared-jvm",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-assertions-shared",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-common-jvm",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-common",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-extensions-jvm",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-extensions",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-framework-api-jvm",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-framework-api",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-framework-concurrency-jvm",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-framework-concurrency",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-framework-discovery-jvm",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-framework-discovery",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-framework-engine-jvm",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-framework-engine",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-property-jvm",
    group = "io.kotest",
    version = "5.3.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-runner-junit5-jvm",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "junit-platform-console-standalone",
    group = "org.junit.platform",
    version = "1.9.3",
)
maven.artifact(
    artifact = "junit-jupiter-api",
    group = "org.junit.jupiter",
    version = "5.9.2",
)
maven.artifact(
    artifact = "junit-jupiter-engine",
    group = "org.junit.jupiter",
    version = "5.9.0",
)
maven.artifact(
    artifact = "junit-jupiter-params",
    group = "org.junit.jupiter",
    version = "5.9.0",
)

use_repo(
    maven,
    "maven",
)
