module(
    name = "bazel_kotlin",
    version = "0.1",
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.4.0",
    dev_dependency = True,
)

bazel_dep(name = "rules_java", version = "7.6.1")
bazel_dep(name = "rules_kotlin", version = "1.9.6")

# https://github.com/buildbuddy-io/bazel_env.bzl
bazel_dep(name = "bazel_env.bzl", version = "0.1.1")
bazel_dep(name = "rules_jvm_external", version = "6.2")

# Include enforces the file name ending "..MODULE.bazel"
include("//:kotest.MODULE.bazel")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # Inline artifacts as triples
        "io.ktor:ktor-server-core-jvm:2.3.12",
        "io.ktor:ktor-http:2.3.12",
        "io.ktor:ktor-server-netty-jvm:2.3.12",
    ],
    fail_if_repin_required = True,
    fail_on_missing_checksum = True,
    fetch_sources = True,
    lock_file = "@//:rules_jvm_external~~maven~maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    resolver = "coursier",
)

# Explicit syntax allowing more customization
maven.artifact(
    testonly = True,
    artifact = "junit-platform-console-standalone",
    group = "org.junit.platform",
    version = "1.9.3",
)
maven.artifact(
    artifact = "junit-jupiter-api",
    group = "org.junit.jupiter",
    version = "5.9.2",
)
maven.artifact(
    artifact = "junit-jupiter-engine",
    group = "org.junit.jupiter",
    version = "5.9.0",
)
maven.artifact(
    artifact = "junit-jupiter-params",
    group = "org.junit.jupiter",
    version = "5.9.0",
)

# Demo for factoring out versions for Renovate
LOG4J_VERSION = "2.20.0"

maven.artifact(
    artifact = "log4j-api",
    group = "org.apache.logging.log4j",
    version = LOG4J_VERSION,
)
maven.artifact(
    artifact = "log4j-core",
    group = "org.apache.logging.log4j",
    version = LOG4J_VERSION,
)
maven.artifact(
    artifact = "log4j-jcl",
    group = "org.apache.logging.log4j",
    version = LOG4J_VERSION,
)
maven.artifact(
    artifact = "log4j-jul",
    group = "org.apache.logging.log4j",
    version = LOG4J_VERSION,
)
maven.artifact(
    artifact = "log4j-slf4j-impl",
    group = "org.apache.logging.log4j",
    version = LOG4J_VERSION,
)
maven.artifact(
    artifact = "log4j-slf4j2-impl",
    group = "org.apache.logging.log4j",
    version = LOG4J_VERSION,
)
use_repo(
    maven,
    "maven",
)
