# Just and example for separating the MODULE.bazel to several files

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.artifact(
    testonly = True,
    artifact = "kotest-assertions-api-jvm",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-assertions-api",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-assertions-core-jvm",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-assertions-core",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-assertions-json-jvm",
    group = "io.kotest",
    version = "5.3.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-assertions-shared-jvm",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-assertions-shared",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-common-jvm",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-common",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-extensions-jvm",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-extensions",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-framework-api-jvm",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-framework-api",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-framework-concurrency-jvm",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-framework-concurrency",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-framework-discovery-jvm",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-framework-discovery",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-framework-engine-jvm",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-framework-engine",
    group = "io.kotest",
    version = "5.4.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-property-jvm",
    group = "io.kotest",
    version = "5.3.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotest-runner-junit5-jvm",
    group = "io.kotest",
    version = "5.4.2",
)
