load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

kt_jvm_library(
    name = "SomeTest_lib",
    testonly = True,
    srcs = ["SomeTest.kt"],
    deps = [
        "//kotlin/net/eigenvalue/example/lib",
        artifact("io.kotest:kotest-assertions-core-jvm"),
        artifact("io.kotest:kotest-framework-api-jvm"),
    ],
)

java_test(
    name = "SomeTest",
    args = [
        "--fail-if-no-tests",
        "--disable-banner",
        "--disable-ansi-colors",
        "--select-class=net.eigenvalue.example.lib.SomeTest",
    ],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    use_testrunner = False,
    runtime_deps = [
        ":SomeTest_lib",
        artifact("io.kotest:kotest-runner-junit5-jvm"),
        artifact("org.apache.logging.log4j:log4j-core"),
        artifact("org.apache.logging.log4j:log4j-api"),
        artifact("org.apache.logging.log4j:log4j-slf4j2-impl"),
        artifact("org.junit.jupiter:junit-jupiter-api"),
        artifact("org.junit.jupiter:junit-jupiter-params"),
        artifact("org.junit.platform:junit-platform-console-standalone"),  # keep
    ],
)
